--- a/tex/appendix/6-akcje.tex
+++ b/tex/appendix/6-akcje.tex
@@ -2,11 +2,11 @@
 
 Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://github.com/0x41gawor/lupus/blob/master/docs/spec/actions.md}.
 
-Specyfikacja akcji w LupN znajduje się w załączniku //TODO. Ten dokument prezentuje przykładowe działanie \textbf{akcji} na \textbf{danych}.
+Specyfikacja \hyperlink{def:akcja}{\textbf{Akcji}} w \hyperlink{def:lupn}{\textbf{LupN}} znajduje się w \hyperref[appendix://TODO]{Załączniku //TODO}. Niniejszy dokument prezentuje przykładowe działanie \hyperlink{def:akcja}{\textbf{Akcji}} na \hyperlink{def:dane}{\textbf{Danych}}.
 
-Akcje zostały opracowane jako najbardziej atomowe operacje, które, gdy zostaną odpowiednio połączone, stanowią narzędzie umożliwiające \textbf{designer'owi pętli} pełne operowanie na \textbf{danych}.
+\hyperlink{def:akcja}{\textbf{Akcje}} zostały opracowane jako najbardziej atomowe operacje, które, gdy zostaną odpowiednio połączone, stanowią narzędzie umożliwiające \hyperlink{def:projektant}{\textbf{Projektantowi Pętli}} pełne operowanie na \hyperlink{def:dane}{\textbf{Danych}}.
 
-Czasami operacja, która na pierwszy rzut oka wydaje się atomowa, wymaga użycia dwóch połączonych akcji. Z drugiej strony, zdarza się, że operacja początkowo uznana za atomową okazuje się jedynie szczególnym przypadkiem bardziej ogólnej operacji. Dobrym przykładem jest nieistniejąca już akcja \texttt{concat}. Została ona zaprojektowana do łączenia dwóch pól w jedno, jednak okazało się, że jest to specyficzny przypadek akcji \texttt{nest}, w której lista \texttt{InputKey} zawiera tylko dwa elementy.
+Czasami operacja, która na pierwszy rzut oka wydaje się atomowa, wymaga użycia dwóch połączonych \hyperlink{def:akcja}{\textbf{Akcji}}. Z drugiej strony, zdarza się, że operacja początkowo uznana za atomową okazuje się jedynie szczególnym przypadkiem bardziej ogólnej operacji. Dobrym przykładem jest nieistniejąca już \hyperlink{def:akcja}{\textbf{Akcja}} \texttt{concat}. Została ona zaprojektowana do łączenia dwóch pól w jedno, jednak okazało się, że jest to specyficzny przypadek \hyperlink{def:akcja}{\textbf{Akcji}} \texttt{nest}, w której lista \texttt{InputKey} zawiera tylko dwa elementy.
 
 \subsection{Podział ogólny}
 
