--- a/tex/util/acronym-list.tex
+++ b/tex/util/acronym-list.tex
@@ -32,4 +32,7 @@
 \acronym{kontrolera (ang. \textit{controller})}{}
 
 \acronym{obiekt API (ang. \textit{API object})}{}
+\acronym{Polityka (ang. \textit{Policy})}{}
+\acronym{Kontroler (ang. \textit{Kontroler})}{}
+\acronym{Plik Manifestowy YAML (ang. \textit{YAML Manifest File})}{}
 
