--- a/tex/5-test/3-wdrozenie-lupus.tex
+++ b/tex/5-test/3-wdrozenie-lupus.tex
@@ -1,13 +1,12 @@
 \subsection{Wdrożenie Lupus}
 
-Sekcja opisuje użycie Lupus jako \textbf{Systemu Sterowania} dla \textbf{Problemu Zarządzania} opisanego w następnej podsekcji dla emulatora sieci 5G, który przyjmie z kolei rolę \textbf{Systemu Zarządzanego}. 
+Sekcja opisuje użycie \hyperlink{def:lupus}{\textbf{Lupus}} jako \hyperlink{def:system-sterowania}{\textbf{Systemu Sterowania}} dla \hyperlink{def:problem-zarzadzania}{\textbf{Problemu Zarządzania}} opisanego w następnej podsekcji dla emulatora sieci 5G, który przyjmie z kolei rolę \hyperlink{def:system-zarzadzany}{\textbf{Systemu Zarządzanego}}. 
 
 \subsubsection{Problem Zarządzania}
 
 Celem jest utrzymanie żądanych wartości zasobów dla funkcji płaszczyzny użytkownika (ang. \textit{User Plane Function, UPF}) na optymalnym poziomie. Optymalność oznacza zapewnienie wystarczających zasobów do obsługi obciążenia, ale jednocześnie unikanie ich nadmiernego przydziału, co pozwala na ograniczenie niepotrzebnych kosztów związanych z wynajmem zasobów chmurowych.
 
-W ramach wdrożenia Open5GS, w tym dla komponentu UPF, istnieje kilka instancji uruchomieniowych (ang. \textit{Deployments}) jak pokazano na rysunku \ref{fig:53-depy}.
-
+W ramach wdrożenia Open5GS, w tym dla komponentu UPF, istnieje kilka instancji uruchomieniowych (ang. \textit{Deployments}), jak pokazano na rysunku \ref{fig:53-depy}.
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{53-depy.png}
@@ -17,11 +16,12 @@ W ramach wdrożenia Open5GS, w tym dla komponentu UPF, istnieje kilka instancji 
 Każdy \textit{pod} w klastrze Kubernetes posiada zdefiniowane wartości dotyczące przydziału zasobów:
 
 \begin{itemize}
-    \item \textbf{\texttt{requests}} – określa ilość zasobów CPU oraz pamięci operacyjnej (RAM), jaką dany pod żąda od środowiska chmurowego. Kubernetes zapewnia, że węzeł posiada wystarczające zasoby, aby spełnić te wymagania przed przydzieleniem poda do \textit{węzła}.
+    \item \textbf{\texttt{requests}} – określa ilość zasobów CPU oraz pamięci operacyjnej (RAM), jaką dany pod żąda od środowiska chmurowego. Kubernetes zapewnia, że \textit{węzeł} posiada wystarczające zasoby, aby spełnić te wymagania przed przydzieleniem poda do \textit{węzła}.
     \item \textbf{\texttt{limits}} – maksymalna ilość zasobów, jaką pod może zużyć. Przekroczenie tych wartości skutkuje zakończeniem procesu (np. jego ubiciem w celu ochrony środowiska).
 \end{itemize}
 
 Dodatkowo możliwe jest monitorowanie rzeczywistego (aktualnego, chwilowego) wykorzystania procesora i pamięci operacyjnej.
+
 
 \textbf{Mechanizmy dostępne w Kubernetes}
 
@@ -44,7 +44,7 @@ resources:
     cpu: "500m"
 \end{lstlisting}
 
-Niniejsza konfiguracja jest traktowana jako \textbf{punkt operacyjny}, który powinien być wystarczający w normalnych warunkach (np. przez 80\% czasu). Jednak w sytuacjach, gdy pojedynczy pod UPF sporadycznie przekracza te wartości, konieczne jest zwiększenie dostępnych zasobów oraz proporcjonalne podniesienie limitów.
+Niniejsza konfiguracja jest traktowana jako \texttt{punkt operacyjny (punkt pracy)}, który powinien być wystarczający w normalnych warunkach (np. przez 80\% czasu). Jednak w sytuacjach, gdy pojedynczy pod UPF sporadycznie przekracza te wartości, konieczne jest zwiększenie dostępnych zasobów oraz proporcjonalne podniesienie limitów.
 
 Zakłada się, że każdorazowe przekroczenie wartości operacyjnych CPU lub pamięci skutkuje przydzieleniem dodatkowych 20\% zasobów dla \texttt{requests} oraz ustawieniem \texttt{limits} na poziomie dwukrotności nowej wartości \texttt{requests}.
 
@@ -65,7 +65,7 @@ Jeśli rzeczywiste wykorzystanie zasobów jest znacząco niższe od wartości op
 
 \textbf{Agent Ingress}
 
-Agent Ingress okresowo pobiera aktualne zużycie zasobów oraz zdefiniowane wartość \texttt{requests} oraz \texttt{limits} dla podów UPF w obu wdrożeniach (ang. \textins{deployments}). Następnie zgodnie ze specyfikacją interfejsu \textbf{Lupin} będzie aktualizował pole \texttt{Input} statusu obiektu API \textbf{Elementu Ingress} obiektem JSON jak pokazano na listingu \ref{lst:521} z przykładowymi wartościami. Jednocześnie takowy obiekt JSON będzie stanowił początkową postać \textbf{danych}.
+\hyperlink{def:agent-ingress}{\textbf{Agent Ingress}} okresowo pobiera aktualne zużycie zasobów oraz zdefiniowane wartości \texttt{requests} oraz \texttt{limits} dla podów UPF w obu wdrożeniach (ang. \textit{deployments}). Następnie, zgodnie ze specyfikacją \hyperlink{def:interfejs-lupin}{\textbf{Interfejsu Lupin}}, będzie aktualizował pole \texttt{Input} statusu obiektu API \hyperlink{def:element-ingres}{\textbf{Elementu Ingress}} obiektem JSON, jak pokazano na listingu \ref{lst:521} z przykładowymi wartościami. Jednocześnie taki obiekt JSON będzie stanowił początkową postać \hyperlink{def:dane}{\textbf{Danych}}.
 
 \begin{lstlisting}[language=sh, caption={\emph{}}\label{lst:521}]
     {
@@ -133,21 +133,21 @@ W zależności od stanu systemu należy podjąć następujące działania:
 
 W związku z powyższym opisem pętla powinna w każdej iteracji określi punkt pracy, czyli stan w jakim znajduje się UPF. Jeśli jest to stan \texttt{NORMAL}, nie ma potrzeby aby wykonywać jakiekolwiek akcje sterujące. W przeciwnym wypadku, należy "dostroić" UPF odpowiednimi wartościami \texttt{requests} oraz \texttt{limits}. Jeśli UPF jest lub zbliża się do stanu krytycznego należy je ustawić z odpowiednim zapasem, zaś jeżeli UPF wraca już do stanu normalnego należ przywrócić im wartości domyślne. Na sam koniec, jeżeli mamy jeden ze stanów przejściowych (\texttt{NORMAL\_TO\_CRITICAL} bądź \texttt{CRITICAL\_TO\_NORMAL}) należy zmienić interwał obserwacji odpowiednio na wysoki lub niski.
 
-Z tego opisu widzimy, że \textbf{Część obliczeniowa} logiki pętli składa się z trzech części:
+Z tego opisu widzimy, że \hyperlink{def:czesc-obliczeniowa}{\textbf{Część obliczeniowa}} logiki pętli składa się z trzech części:
 \begin{itemize}
     \item Ustalenie punktu pracy 
     \item Obliczenie wartości \texttt{requests} oraz \texttt{limits}
     \item Ustalenie wartości interwału na podstawie punkty pracy
 \end{itemize}
 
-Dlatego też powstaną trzy \textbf{Elementy Zewnętrzne}:
+Dlatego też powstaną trzy \hyperlink{def:element-zewnetrzny}{\textbf{Elementy Zewnętrzne}}:
 \begin{itemize}
-    \item \textbf{POINT} – akceptuje \texttt{"*"} (wszystkie pola danych), zwraca \texttt{"point"}.
+    \item \textbf{POINT} – akceptuje \texttt{"*"} (wszystkie \hyperlink{def:pole-danych}{\textbf{Pola Danych}}), zwraca \texttt{"point"}.
     \item \textbf{SPEC} – akceptuje \texttt{"actual"}, zwraca \texttt{"spec"} zawierające wartości \texttt{"requests"} oraz \texttt{"limits"}.
     \item \textbf{INTERVAL} – akceptuje \texttt{"point"}, zwraca \texttt{"interval"}.
 \end{itemize}
 
-A \textbf{Workflow Akcji} dla \textbf{Elementu Lupus} odpowiedzialnego za rekoncylację jednego wdrożenia będzie wyglądało jak na rysunku \ref{fig:53-workflow-akcji}
+A \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} dla \hyperlink{def:element-lupus}{\textbf{Elementu Lupus}} odpowiedzialnego za rekoncyliację jednego wdrożenia będzie wyglądało jak na rysunku \ref{fig:53-workflow-akcji}.
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{53-workflow-akcji.png}
@@ -156,26 +156,27 @@ A \textbf{Workflow Akcji} dla \textbf{Elementu Lupus} odpowiedzialnego za rekonc
 
 \subsubsection{Przygotowanie Elementów Zewnętrznych}
 
-Każdy z elementów zewnętrznych przygotowano jako aplikacje python emulujące serwer Open Policy Agent.
+Każdy z \hyperlink{def:element-zewnetrzny}{\textbf{Elementów Zewnętrznych}} przygotowano jako aplikację Python emulującą serwer \hyperlink{def:opa}{\textbf{Open Policy Agent}}.
 
-Implementacje można znaleźć w załączniku //TODO.
+Implementacje można znaleźć w \hyperref[appendix://TODO]{załączniku}.
 
 \subsubsection{Wyrażenie workflow pętli w notacji LupN}
 
-\textbf{Workflow Pętli} pokazano na rysunku \ref{fig:53-workflow-petli}
+\hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} pokazano na rysunku \ref{fig:53-workflow-petli}.
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{53-workflow-petli.png}
     \caption{Workflow Pętli}\label{fig:53-workflow-petli}
 \end{figure}
 
-Element "demux" służy do rozdzielenia \textbf{danych} na dwie części. Każde wdrożenie UPF ma swój dedykowany element "upf1" lub "upf2", który obsługuje je według workflow akcji przedstawionej w poprzedniej podsekcji. Elementy "upf1" oraz "upf2" niezależnie pobudzają endpoint \texttt{/api/data} agenta egress.
+Element \texttt{demux} służy do rozdzielenia \hyperlink{def:dane}{\textbf{Danych}} na dwie części. Każde wdrożenie UPF ma swój dedykowany element \texttt{upf1} lub \texttt{upf2}, który obsługuje je według \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} przedstawionego w poprzedniej podsekcji. Elementy \texttt{upf1} oraz \texttt{upf2} niezależnie pobudzają endpoint \texttt{/api/data} \hyperlink{def:agent-egress}{\textbf{Agenta Egress}}.
 
-Kod LupN znajduje się w załączniku //TODO. Ostatnim krokiem w celu uruchomienia pętli jest zaaplikowanie \textbf{pliku LupN}. 
+Kod \hyperlink{def:lupn}{\textbf{LupN}} znajduje się w \hyperref[appendix://TODO]{załączniku}. Ostatnim krokiem w celu uruchomienia pętli jest zaaplikowanie \hyperlink{def:plik-lupn}{\textbf{Pliku LupN}}.
 
 \subsubsection{Prezentacja działania jednej iteracji pętli}
 
-Iteracje rozpoczyna Ingress Agent, który pobiera dane z Kubernetes (rys \ref{fig:53-scr-1}). Następnie aktualizuje on status obiektu API \texttt{lola-demux} (rys. \ref{fig:53-scr-2}), który wykonuje swoje workflow akcji (rys. \ref{fig:53-scr-3}), skutkujące aktualizacją statusu obiektów API \texttt{upf1} i \texttt{upf2} (rys. \ref{fig:53-scr-6}). To skutkuje wywołaniem Operatora dla tych obiektów. Operator wykonuje dla obu workflow akcji (rys. \ref{fig:53-scr-4}). Na koniec oba elementy uderzają w endpoint \texttt{api/data} serwowany przez Agenta Egress (rys. \ref{fig:53-scr-5}).
+Iterację rozpoczyna \hyperlink{def:agent-ingress}{\textbf{Agent Ingress}}, który pobiera \hyperlink{def:dane}{\textbf{Dane}} z Kubernetes (rys. \ref{fig:53-scr-1}). Następnie aktualizuje on \texttt{Status} obiektu API \texttt{lola-demux} (rys. \ref{fig:53-scr-2}), który wykonuje swoje \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} (rys. \ref{fig:53-scr-3}), skutkujące aktualizacją \texttt{Statusu} obiektów API \texttt{upf1} i \texttt{upf2} (rys. \ref{fig:53-scr-6}). To skutkuje wywołaniem \texttt{Operatora} dla tych obiektów. Operator wykonuje dla obu \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} (rys. \ref{fig:53-scr-4}). Na koniec oba elementy wywołują endpoint \texttt{api/data} serwowany przez \hyperlink{def:agent-egress}{\textbf{Agenta Egress}} (rys. \ref{fig:53-scr-5}).
+
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{53-scr-1.png}
