--- a/tex/appendix/4-lupin-lupout.tex
+++ b/tex/appendix/4-lupin-lupout.tex
@@ -11,18 +11,18 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
 
 \subsection{Interfejs Lupin}
 
-Projektant może zdefiniować wiele \textbf{Elementów Lupus}, połączonych na różne, skomplikowane sposoby. Musi jednak zdecydować, który z nich zostanie wywołany przez \textbf{IAgenta Ingress}. Taki element można nazwać \textbf{Element Ingress}. Lupus zaleca posiadanie tylko jednego Elementu Ingress.
-Jeśli \textbf{Agent Ingress} chce zasygnalizować, że można zaobserwować nowy stan systemu zarządzanego (co oznacza, że musi zostać uruchomiona nowa iteracja pęli sterowania), musi zmodyfikować pole \texttt{Status.Input} w \textit{obiekcie API} \textbf{Elementu Ingress}. Wartość umieszczona w tym polu będzie reprezentować nowy \textbf{Aktualny Stan}.
+\hyperlink{def:projektant}{\textbf{Projektant}} może zdefiniować wiele \hyperlink{def:element-lupus}{\textbf{Elementów Lupus}}, połączonych na różne, skomplikowane sposoby. Musi jednak zdecydować, który z nich zostanie wywołany przez \hyperlink{def:agent-ingress}{\textbf{Agenta Ingress}}. Taki element można nazwać \hyperlink{def:element-ingres}{\textbf{Elementem Ingress}}. \hyperlink{def:lupus}{\textbf{Lupus}} zaleca posiadanie tylko jednego \hyperlink{def:element-ingres}{\textbf{Elementu Ingress}}.
 
-Pole \texttt{Status.Input} w \textbf{Ingress Element CR} jest typu \texttt{RawExtension}, co oznacza, że podlega pod specyfikacje danych \\TODO załącznik daty
+Jeśli \hyperlink{def:agent-ingress}{\textbf{Agent Ingress}} chce zasygnalizować, że można zaobserwować nowy stan \hyperlink{def:system-zarzadzany}{\textbf{Systemu Zarządzanego}} (co oznacza, że musi zostać uruchomiona nowa iteracja \hyperlink{def:zamknieta-petla-sterowania}{\textbf{Pętli Sterowania}}), musi zmodyfikować pole \texttt{Status.Input} w \textit{obiekcie API} \hyperlink{def:element-ingres}{\textbf{Elementu Ingress}}. Wartość umieszczona w tym polu będzie reprezentować nowy \hyperlink{def:stan-aktualny}{\textbf{Aktualny Stan}}.
 
-JSON przesłany w tym miejscu będzie stanowił \textbf{Dane} dla tego elementu.
+Pole \texttt{Status.Input} w \hyperlink{def:element-ingres}{\textbf{Ingress Element CR}} jest typu \texttt{RawExtension}, co oznacza, że podlega pod specyfikację \hyperlink{def:dane}{\textbf{Danych}} (\hyperref[appendix://TODO]{Załącznik //TODO}).
 
-Oprogramowanie implementuje interfejs \texttt{Lupin}, jeśli w pewnym miejscu swojego kodu wysyła żądanie HTTP do \textbf{kube-api-server}, które aktualizuje status \textbf{Elementu Ingress}, a dokładniej pole \texttt{input}. Wartość musi być obiektem JSON, który reprezentuje \textbf{Aktualny Stan} \textbf{Zarządzanego Systemu}. 
+JSON przesłany w tym miejscu będzie stanowił \hyperlink{def:dane}{\textbf{Dane}} dla tego elementu.
+
+Oprogramowanie implementuje interfejs \texttt{Lupin}, jeśli w pewnym miejscu swojego kodu wysyła żądanie HTTP do \textbf{kube-api-server}, które aktualizuje status \hyperlink{def:element-ingres}{\textbf{Elementu Ingress}}, a dokładniej pole \texttt{input}. Wartość musi być obiektem JSON, który reprezentuje \hyperlink{def:stan-aktualny}{\textbf{Aktualny Stan}} \hyperlink{def:system-zarzadzany}{\textbf{Systemu Zarządzanego}}. 
 
 \subsection{Interfejs Lupout}
 
-Punktem wyjścia z \textbf{Systemu Sterowania Lupus} jest ostatni \textbf{Element Lupus} czyli (\textbf{Element Egress}). Wysyła on swoje \textbf{finalne dane} (lub ich część) do \textbf{Agenta Egress}. \textbf{Egress Agent} musi przekształcić to wejście w \textbf{Akcje Sterowania}, wykonywaną bezpośrednio na \textbf{systemie zarządzanym}.
+Punktem wyjścia z \hyperlink{def:system-sterowania}{\textbf{Systemu Sterowania Lupus}} jest ostatni \hyperlink{def:element-lupus}{\textbf{Element Lupus}}, czyli \hyperlink{def:element-egress}{\textbf{Element Egress}}. Wysyła on swoje \hyperlink{def:finalne-dane}{\textbf{Finalne Dane}} (lub ich część) do \hyperlink{def:agent-egress}{\textbf{Agenta Egress}}. \hyperlink{def:agent-egress}{\textbf{Agent Egress}} musi przekształcić to wejście w \hyperlink{def:akcja-sterujaca}{\textbf{Akcję Sterowania}}, wykonywaną bezpośrednio na \hyperlink{def:system-zarzadzany}{\textbf{Systemie Zarządzanym}}.
 
-Oprogramowanie implementuje interfejs \texttt{Lupout}, jeśli implementuje serwer HTTP, który akceptuje wejściowe dane JSON i tłumaczy je na \textbf{Akcje Sterowania} wykonywaną na \textbf{Systemie Zarządzanym}. 
-
+Oprogramowanie implementuje interfejs \texttt{Lupout}, jeśli implementuje serwer HTTP, który akceptuje wejściowe \hyperlink{def:dane}{\textbf{Dane}} w formacie JSON i tłumaczy je na \hyperlink{def:akcja-sterujaca}{\textbf{Akcję Sterowania}}, wykonywaną na \hyperlink{def:system-zarzadzany}{\textbf{Systemie Zarządzanym}}. 
